--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ie.wspace.lab4notesapp">
+    package="ie.wspace.timemanagementapp">
 
     <application
         android:allowBackup="true"
@@ -16,7 +16,7 @@
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="ie.wspace.lab4notesapp.MainActivity" />
+                android:value="ie.wspace.timemanagementapp.MainActivity" />
         </activity>
         <activity
             android:name=".MainActivity"
