--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "ie.wspace.lab4notesapp"
+        applicationId "ie.wspace.timemanagementapp"
         minSdkVersion 26
         targetSdkVersion 29
         versionCode 1
