Added TimerActivity and view which is functional, but currently replaces EditorActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".TimerActivity"
+            android:parentActivityName=".EditorActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="ie.wspace.timemanagementapp.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
